# slint-calculator

./: Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint  button.slint
