[package]
name = "calc-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
slint-build = "1.0"

[dependencies]
i-slint-backend-winit = { git = "https://github.com/slint-ui/slint" }
slint = { git = "https://github.com/slint-ui/slint" }
