[package]
name = "calc-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.4", features = ["document-features"] }
i-slint-backend-winit = "1.4"

[build-dependencies]
slint-build = "1.4"
